# intents

./: .catalog-info.yaml  .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Cargo.toml.orig  Makefile  Makefile.toml  README.md  compose.override.yaml  compose.yaml  justfile  rust-toolchain  taplo.toml
actions/: Cargo.toml
actions/src/: arbitrary_helpers.rs  lib.rs
adr36/: Cargo.toml
adr36/src/: lib.rs
bip322/: Cargo.toml  README.md  implementation.md  validate_unisat_comprehensive.py  validate_unisat_vector.py
bip322/src/: bitcoin_minimal.rs  der.rs  error.rs  hashing.rs  lib.rs  signature.rs  tests.rs  transaction.rs  verification.rs
bip322/src/verification/: mod.rs  p2pkh.rs  p2sh.rs  p2wpkh.rs  p2wsh.rs
bip322/tests/: integration_test.rs
bitmap/: Cargo.toml
bitmap/src/: b256.rs  compact.rs  lib.rs
contract_extensions/: Cargo.toml
contract_extensions/src/: lib.rs
contract_extensions/src/defuse/: account_manager.rs  deployer.rs  intents.rs  mod.rs  nonce.rs  signer.rs
contract_extensions/src/escrow/: mod.rs
contract_extensions/src/poa/: mod.rs
core/: Cargo.toml  README.md
core/crypto/src/: signature.rs
core/decimal/src/: arbitrary.rs
core/src/: accounts.rs  amounts.rs  deadline.rs  error.rs  event_sink.rs  events.rs  fees.rs  lib.rs  nonce.rs  state_init.rs  token_id.rs  tokens.rs
core/src/engine/: event_emitter.rs  inspector.rs  mod.rs  mutator.rs
core/src/events/: mod.rs
core/src/intents/: account.rs  auth.rs  imt.rs  mod.rs  token_diff.rs  tokens.rs
core/src/nonce/: expirable.rs  mod.rs  salted.rs  verifier.rs  versioned.rs
core/src/payload/: adr36.rs  bip322.rs  mod.rs  multi.rs  raw.rs  sep53.rs  sr25519.rs  tep104.rs  ton_connect.rs  webauthn.rs
core/src/token_id/: error.rs  mod.rs  nep141.rs  nep171.rs  nep245.rs
crypto/: Cargo.toml
crypto/src/: lib.rs  parse.rs  public_key.rs  serde.rs  signature.rs
crypto/src/curve/: ed25519.rs  mod.rs  p256.rs  secp256k1.rs  sr25519.rs
crypto/src/public_key/: mod.rs
crypto/src/serde/: curve.rs
deadline/: Cargo.toml
deadline/src/: lib.rs
decimal/: Cargo.toml
decimal/fuzz/: Cargo.toml  README.md
decimal/fuzz/fuzz_targets/: roundtrip.rs
decimal/src/: lib.rs  ops.rs  str.rs
defuse/: Cargo.toml  README.md  build.rs
defuse/src/: account_sync.rs  accounts.rs  arbitrary.rs  far.rs  far_mint.rs  intents.rs  lib.rs  pk_sync.rs  salts.rs  simulation_output.rs
defuse/src/contract/: abi.rs  account_sync.rs  admin.rs  arbitrary.rs  config.rs  consts.rs  event_sink.rs  events.rs  far_mint.rs  fees.rs  garbage_collector.rs  gas.rs  mod.rs  pk_sync.rs  runtime.rs  salts.rs  state.rs  upgrade.rs
defuse/src/extensions/: account_manager.rs  deployer.rs  force_manager.rs  intents.rs  mod.rs  relayer.rs  signer.rs
defuse/src/sandbox_ext/: account_manager.rs  deployer.rs  force_manager.rs  intents.rs  mod.rs  relayer.rs  signer.rs
defuse/src/tokens/: imt.rs  mod.rs  nep245.rs
defuse/tests/: mod.rs
defuse/tests/accounts/: auth_by_predecessor_id.rs  force.rs  manage_public_keys.rs  nonces.rs
defuse/tests/env/: builder.rs  mod.rs  nonce.rs  state.rs  storage.rs
defuse/tests/intents/: ft_withdraw.rs  legacy_nonce.rs  mod.rs  native_withdraw.rs  public_key.rs  relayers.rs  simulate.rs  token_diff.rs  transfer.rs
defuse/tests/state/: fee.rs  salt.rs  upgrade.rs
defuse/tests/storage/: mod.rs
defuse/tests/tokens/: nep141.rs  nep171.rs
erc191/: Cargo.toml
erc191/src/: lib.rs
escrow/: Cargo.toml  README.md  SHARDED.md
escrow-proxy/: Cargo.toml
escrow-proxy/examples/: escrow-swap-demo.rs
escrow-proxy/src/: admin.rs  error.rs  escrow_params.rs  ext.rs  lib.rs  message.rs  roles.rs  state.rs  upgrade.rs
escrow-proxy/src/contract/: admin.rs  auth_call.rs  mod.rs  upgrade.rs  utils.rs
escrow-proxy/tests/: env.rs  escrow_proxy.rs  message_compat.rs  transfer_auth.rs
escrow-swap/: Cargo.toml  README.md
escrow-swap/src/: action.rs  auth_call.rs  error.rs  event.rs  ext.rs  lib.rs  sandbox_ext.rs  state.rs
escrow-swap/src/contract/: auth_call.rs  cleanup.rs  close.rs  fill.rs  fund.rs  lost_found.rs  mod.rs  resolve.rs  return_value.rs  validate.rs
escrow-swap/src/tokens/: mod.rs  nep141.rs  nep245.rs
escrow-swap/tests/: env.rs  escrow.rs  partial_fills.rs  testnet.rs
escrow-swap/tests/base_env/: escrow.rs  (+1 more)
escrow/src/: action.rs  auth_call.rs  error.rs  event.rs  lib.rs  old.rs  price.rs  state.rs  tokens.rs  transfer.rs  utils.rs
escrow/tests/: escrow.rs
global-deployer/: Cargo.toml  README.md
global-deployer/examples/: code_hash.rs  state_init.rs
global-deployer/src/: contract.rs  error.rs  lib.rs
multi-token-receiver-stub/: Cargo.toml  README.md
multi-token-receiver-stub/src/: lib.rs
near-utils/: Cargo.toml
near-utils/src/: account_id.rs  cache.rs  digest.rs  env.rs  event.rs  lib.rs  lock.rs  panic.rs  panic_on_clone.rs  promise.rs  time.rs
nep245/: Cargo.toml
nep245/src/: checked.rs  enumeration.rs  events.rs  lib.rs  metadata.rs
num-utils/: Cargo.toml
num-utils/src/: add_sub.rs  div.rs  float.rs  lib.rs  mul.rs  mul_div.rs
oneshot-condvar/: Cargo.toml  README.md
oneshot-condvar/src/: error.rs  event.rs  lib.rs  storage.rs
poa-factory/: Cargo.toml  build.rs
poa-factory/src/: contract.rs  extensions.rs  lib.rs  sandbox_ext.rs
poa-factory/tests/: factory.rs
poa-token/: Cargo.toml
poa-token/src/: contract.rs  lib.rs  prefixed.rs
price/: Cargo.toml
price/src/: lib.rs  ops.rs  str.rs
runesdex-solver/: Cargo.toml  Dockerfile  README.md
runesdex-solver/src/: config.rs  lib.rs  main.rs  runesdex.rs  solver.rs  types.rs
sandbox/: Cargo.toml  Cargo.toml.orig
sandbox-ext/: Cargo.toml
sandbox-ext/src/: condvar_ext.rs  escrow_proxy_ext.rs  escrow_swap_ext.rs  lib.rs  multi_token_receiver.rs
sandbox/src/: account.rs  global_contract_workaround.rs  helpers.rs  lib.rs  lib.rs.orig  tx.rs
sep53/: Cargo.toml
sep53/src/: lib.rs
serde-utils/: Cargo.toml
serde-utils/src/: base58.rs  base64.rs  hex.rs  lib.rs  tlb.rs
sr25519/: Cargo.toml
sr25519/src/: lib.rs
sr25519/tests/: integration_test.rs
(+1139 files in other folders)
