[workspace]
resolver = "3"
members = [
    "contracts/defuse",
    "contracts/defuse/core",
    "contracts/global-deployer",
    "contracts/escrow-swap",
    "contracts/poa/factory",
    "contracts/poa/token",
    "contracts/wallet",

    "crates/bitmap",
    "crates/borsh-utils",
    "crates/crypto",
    "crates/io-utils",
    "crates/map-utils",
    "crates/num-utils",
    "crates/serde-utils",

    "crates/near/admin-utils",
    "crates/near/auth-call",
    "crates/near/controller",
    "crates/near/nep245",
    "crates/near/utils",
    "crates/near/wnear",

    "crates/primitives/deadline",
    "crates/primitives/decimal",
    "crates/primitives/fees",
    "crates/primitives/token-id",

    "crates/signatures/erc191",
    "crates/signatures/nep413",
    "crates/signatures/nep461",
    "crates/signatures/webauthn",
    "crates/signatures/sep53",
    "crates/signatures/tip191",
    "crates/signatures/ton-connect",

    "crates/testing/utils",
    "crates/testing/randomness",
    "crates/testing/sandbox",

    "tests",
]
default-members = ["contracts/defuse"]

[workspace.package]
edition = "2024"
repository = "https://github.com/near/intents"
version = "0.1.0"
rust-version = "1.86.0"

[workspace.dependencies]
defuse.path = "contracts/defuse"
defuse-core.path = "contracts/defuse/core"
defuse-global-deployer.path = "contracts/global-deployer"
defuse-escrow-swap.path = "contracts/escrow-swap"
defuse-poa-factory.path = "contracts/poa/factory"
defuse-poa-token.path = "contracts/poa/token"
defuse-wallet.path = "contracts/wallet"

defuse-bitmap.path = "crates/bitmap"
defuse-borsh-utils.path = "crates/borsh-utils"
defuse-crypto = { path = "crates/crypto", default-features = false }
defuse-io-utils.path = "crates/io-utils"
defuse-map-utils.path = "crates/map-utils"
defuse-num-utils.path = "crates/num-utils"
defuse-serde-utils.path = "crates/serde-utils"

defuse-admin-utils.path = "crates/near/admin-utils"
defuse-auth-call.path = "crates/near/auth-call"
defuse-controller.path = "crates/near/controller"
defuse-nep245.path = "crates/near/nep245"
defuse-near-utils.path = "crates/near/utils"
defuse-wnear.path = "crates/near/wnear"

defuse-deadline.path = "crates/primitives/deadline"
defuse-decimal.path = "crates/primitives/decimal"
defuse-fees.path = "crates/primitives/fees"
defuse-token-id = { path = "crates/primitives/token-id", default-features = false }

defuse-erc191.path = "crates/signatures/erc191"
defuse-nep413.path = "crates/signatures/nep413"
defuse-nep461.path = "crates/signatures/nep461"
defuse-webauthn = { path = "crates/signatures/webauthn", default-features = false }
defuse-sep53.path = "crates/signatures/sep53"
defuse-tip191.path = "crates/signatures/tip191"
defuse-ton-connect = { path = "crates/signatures/ton-connect", default-features = false, features = [
    "text",
] }

defuse-randomness.path = "crates/testing/randomness"
defuse-sandbox.path = "crates/testing/sandbox"
defuse-test-utils.path = "crates/testing/utils"

defuse-tests.path = "tests"

cargo-near-build = "0.9.0"
near-account-id = "2.4.0"
near-api = "0.8.3"
near-api-types = "0.8.3"
near-openapi-types = "0.6.0"
near-contract-standards = "5.24"
near-crypto = "0.34.1"
near-plugins = { git = "https://github.com/Near-One/near-plugins", tag = "v0.5.0" }
near-sandbox = "0.3.5"
near-sdk = "5.24"
near-workspaces = "0.22"

anyhow = "1"
# TODO: `features = ["derive"]` needed because near-sdk uses `derive(Arbitrary)`
# but doesn't enable the feature itself. Remove once fixed upstream in near-sdk.
arbitrary = { version = "1", features = ["derive"] }
array-util = "1"
bitflags = "2.9.1"
bnum = { version = "0.13", features = ["borsh"] }
chrono = { version = "0.4", default-features = false }
derive_more = "2.0"
digest = { version = "0.10", default-features = false }
ed25519-dalek = { version = "2.1", default-features = false }
futures = "0.3"
generic-array = "1"
hex = "0.4"
hex-literal = "1.0"
impl-tools = "0.11"
itertools = "0.14"
num-traits = "0.2.19"
p256 = { version = "0.13.2", default-features = false, features = ["ecdsa"] }
proptest = "1.5"
rand = "0.10"
rand_core = "0.10"
rstest = "0.25"
schemars = "0.8"
serde_json = "1"
serde_with = "3.9"
stellar-strkey = "0.0.13"
strum = { version = "0.27", features = ["derive"] }
thiserror = "2"
tlb-ton = { version = "0.7.2", default-features = false }
tokio = { version = "1.45", default-features = false }
tracing = "0.1"
clap = { version = "4.5.55", features = ["derive"] }

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
as_conversions = { level = "deny", priority = -1 }

module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
unreadable_literal = "allow"
similar_names = "allow"
too_long_first_doc_paragraph = "allow"

[profile.release]
codegen-units = 1
opt-level = 3
lto = true
debug = false
strip = "symbols"
panic = "abort"
overflow-checks = true
