[workspace]
default-members = ["contracts/defuse"]
members = [
  "contracts/defuse",
  "contracts/defuse/core",
  "contracts/global-deployer",
  "contracts/global-deployer/core",
  "contracts/outlayer-app",
  "contracts/outlayer-app/core",
  "contracts/escrow-swap",
  "contracts/poa/factory",
  "contracts/poa/token",
  "contracts/treasury-logger",
  "contracts/wallet",

  "crates/bitmap",
  "crates/borsh-utils",
  "crates/crypto",
  "crates/ckd",
  "crates/digest",
  "crates/io-utils",
  "crates/kdf",
  "crates/kdf/crypto",
  "crates/kdf/mpc",
  "crates/map-utils",
  "crates/num-utils",
  "crates/rand-compat",
  "crates/serde-utils",
  "crates/time",

  "crates/near/admin-utils",
  "crates/near/auth-call",
  "crates/near/controller",
  "crates/near/nep245",
  "crates/near/utils",
  "crates/near/wnear",

  "crates/primitives/decimal",
  "crates/primitives/fees",
  "crates/primitives/token-id",

  "crates/signatures/erc191",
  "crates/signatures/nep413",
  "crates/signatures/nep461",
  "crates/signatures/webauthn",
  "crates/signatures/sep53",
  "crates/signatures/tip191",
  "crates/signatures/ton-connect",

  "crates/wallet/sdk",
  "crates/wallet/relayer",

  "crates/testing/utils",
  "crates/testing/randomness",
  "crates/testing/sandbox",

  "tests",
]
resolver = "3"

[workspace.package]
edition = "2024"
repository = "https://github.com/near/intents"
rust-version = "1.93.0"
version = "0.1.0"

[workspace.dependencies]
defuse.path = "contracts/defuse"
defuse-core.path = "contracts/defuse/core"
defuse-escrow-swap.path = "contracts/escrow-swap"
defuse-global-deployer.path = "contracts/global-deployer"
defuse-global-deployer-core = { path = "contracts/global-deployer/core", default-features = false }
defuse-outlayer-app.path = "contracts/outlayer-app"
defuse-outlayer-app-core = { path = "contracts/outlayer-app/core", default-features = false }
defuse-poa-factory.path = "contracts/poa/factory"
defuse-poa-token.path = "contracts/poa/token"
defuse-wallet.path = "contracts/wallet"

defuse-bitmap.path = "crates/bitmap"
defuse-borsh-utils.path = "crates/borsh-utils"
defuse-ckd = { path = "crates/ckd", default-features = false }
defuse-crypto = { path = "crates/crypto", default-features = false }
defuse-digest.path = "crates/digest"
defuse-io-utils.path = "crates/io-utils"
defuse-kdf = { path = "crates/kdf", default-features = false }
defuse-kdf-crypto = { path = "crates/kdf/crypto", default-features = false }
defuse-kdf-mpc = { path = "crates/kdf/mpc", default-features = false }
defuse-map-utils.path = "crates/map-utils"
defuse-num-utils.path = "crates/num-utils"
defuse-rand-compat.path = "crates/rand-compat"
defuse-serde-utils.path = "crates/serde-utils"
defuse-time.path = "crates/time"

defuse-admin-utils.path = "crates/near/admin-utils"
defuse-auth-call.path = "crates/near/auth-call"
defuse-controller.path = "crates/near/controller"
defuse-near-utils.path = "crates/near/utils"
defuse-nep245.path = "crates/near/nep245"
defuse-wnear.path = "crates/near/wnear"

defuse-decimal.path = "crates/primitives/decimal"
defuse-fees.path = "crates/primitives/fees"
defuse-token-id = { path = "crates/primitives/token-id", default-features = false }

defuse-erc191.path = "crates/signatures/erc191"
defuse-nep413.path = "crates/signatures/nep413"
defuse-nep461.path = "crates/signatures/nep461"
defuse-sep53.path = "crates/signatures/sep53"
defuse-tip191.path = "crates/signatures/tip191"
defuse-ton-connect = { path = "crates/signatures/ton-connect", default-features = false, features = ["text"] }
defuse-webauthn = { path = "crates/signatures/webauthn", default-features = false }

defuse-wallet-relayer.path = "crates/wallet/relayer"
defuse-wallet-sdk.path = "crates/wallet/sdk"

defuse-randomness.path = "crates/testing/randomness"
defuse-sandbox.path = "crates/testing/sandbox"
defuse-test-utils.path = "crates/testing/utils"

defuse-tests.path = "tests"

cargo-near-build = "0.11.3"
near-account-id = "2.6.0"
near-api = "0.8.6"
near-api-types = "0.8.6"
near-contract-standards = "5.28.2"
near-crypto = "0.36.0"
near-kit = { version = "0.11.1", default-features = false }
near-openapi-types = "0.8.0"
near-plugins = "0.5.3"
near-sandbox = "0.3.11"
near-sdk = "5.28.2"
near-sdk-env = "0.1.1"
near-workspaces = "0.22.2"

# TODO: `features = ["derive"]` needed because near-sdk uses `derive(Arbitrary)`
# but doesn't enable the feature itself. Remove once fixed upstream in near-sdk.
anyhow = "1"
arbitrary = { version = "1", features = ["derive"] }
array-util = "1"
async-trait = "0.1.89"
base64 = "0.22.1"
bitflags = "2.13"
blstrs = "0.7.1"
bnum = { version = "0.13", features = ["borsh"] }
borsh = "1.6.1"
bs58 = "0.5.1"
bytes = "1.11.1"
cfg_eval = "0.1.2"
chrono = { version = "0.4", default-features = false }
clap = { version = "4.5.55", features = ["derive"] }
curve25519-dalek = "4.1.3"
derive_more = "2.0"
digest = { version = "0.11", default-features = false }
digest-io = "0.1.0"
ed25519-dalek = { version = "2.1", default-features = false }
futures = "0.3"
generic-array = "1"
hex = "0.4"
hex-literal = "1.0"
impl-tools = "0.11"
itertools = "0.14"
k256 = { version = "0.13.4", default-features = false }
num-traits = "0.2.19"
p256 = { version = "0.13.2", default-features = false }
pairing = "0.23"                                              # TODO: features
proptest = "1.5"
rand = "0.10"
rand_core = "0.10"
ripemd = "0.2"
rstest = "0.26"
schemars = { version = "0.8", default-features = false }
serde = "1"
serde_json = "1"
serde_with = "3.21"
sha2 = "0.11"
sha3 = "0.11"
stellar-strkey = "0.0.13"
strum = { version = "0.28", features = ["derive"] }
thiserror = "2"
tlb-ton = { version = "0.8", default-features = false }
tokio = { version = "1.45", default-features = false }
tokio-util = { version = "0.7", default-features = false }
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2"
zeroize = { version = "1.9", features = ["derive"] }

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(near)"] }

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
as_conversions = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }

missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
similar_names = "allow"
too_long_first_doc_paragraph = "allow"
unreadable_literal = "allow"

[profile.release]
codegen-units = 1
opt-level = 3
lto = true
debug = false
strip = "symbols"
panic = "abort"
overflow-checks = true
