[package]
name = "defuse-actions"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true

[lints]
workspace = true

[features]
abi = ["near-sdk/abi"]
arbitrary = ["dep:arbitrary", "near-sdk/arbitrary"]

[dependencies]
near-sdk = { workspace = true, features = ["deterministic-account-ids"] }
arbitrary = { workspace = true, optional = true }
