[package]
name = "defuse-bip322"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
defuse-crypto = { workspace = true, features = ["serde"] }
defuse-near-utils.workspace = true

near-sdk.workspace = true
serde_with.workspace = true

# For Bitcoin address parsing
bs58 = "0.5"
bech32 = "0.11"

[features]
abi = ["defuse-crypto/abi"]

[dev-dependencies]
hex-literal.workspace = true
near-sdk = { workspace = true, features = ["unit-testing"] }
rstest.workspace = true
defuse-core.workspace = true
serde_json.workspace = true
serde_with.workspace = true
