[package]
name = "defuse-bitmap"
edition.workspace = true
version.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
defuse-map-utils.workspace = true

near-sdk.workspace = true

arbitrary = { workspace = true, optional = true }
defuse-borsh-utils = { workspace = true, features = ["bits"], optional = true }
num-traits = { workspace = true, optional = true }
tlbits = { workspace = true, optional = true }

[features]
abi = ["near-sdk/abi"]
arbitrary = ["dep:arbitrary"]
compact = ["dep:defuse-borsh-utils", "dep:num-traits", "dep:tlbits"]

[dev-dependencies]
bnum.workspace = true
rand.workspace = true
hex-literal.workspace = true
near-sdk = { workspace = true, features = ["unit-testing"] }
rstest.workspace = true

[lints]
workspace = true
