[package]
name = "defuse-contract-extensions"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[lints]
workspace = true

[dependencies]
defuse-sandbox = {workspace = true}
defuse = {workspace = true, features = ["contract"], optional = true}
defuse-poa-factory = {workspace = true, features = ["contract"], optional = true}
defuse-escrow-swap = {workspace = true, features = ["default"], optional = true}
defuse-core = { workspace = true }
defuse-serde-utils = { workspace = true }
defuse-nep245 = { workspace = true }
near-contract-standards.workspace = true
near-sdk = { workspace = true }
defuse-test-utils.workspace = true
defuse-randomness.workspace = true

[features]
poa = ["dep:defuse-poa-factory"]
defuse = ["dep:defuse"]
escrow = ["dep:defuse-escrow-swap"]