[package]
name = "defuse-core"
edition.workspace = true
version.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
defuse-auth-call.workspace = true
defuse-adr36.workspace = true
defuse-bitmap.workspace = true
defuse-crypto = { workspace = true, features = ["serde"] }
defuse-deadline.workspace = true
defuse-erc191.workspace = true
defuse-fees.workspace = true
defuse-nep245.workspace = true
defuse-nep413.workspace = true
defuse-map-utils.workspace = true
defuse-near-utils.workspace = true
defuse-num-utils.workspace = true
defuse-serde-utils.workspace = true
defuse-sep53.workspace = true
defuse-tip191.workspace = true
defuse-token-id = { workspace = true, features = [
    "nep141",
    "nep171",
    "nep245",
] }
defuse-ton-connect.workspace = true
defuse-webauthn.workspace = true

arbitrary = { workspace = true, optional = true }
defuse-borsh-utils = { workspace = true, features = ["chrono"] }
derive_more = { workspace = true, features = ["from"] }
hex.workspace = true
hex-literal.workspace = true
impl-tools.workspace = true
near-contract-standards.workspace = true
near-sdk = { workspace = true, features = ["deterministic-account-ids"] }
serde_with.workspace = true
strum.workspace = true
thiserror.workspace = true

[features]
abi = [
    "defuse-crypto/abi",
    "defuse-deadline/abi",
    "defuse-serde-utils/abi",
    "defuse-token-id/abi",
    "defuse-ton-connect/abi",
]
arbitrary = [
    "dep:arbitrary",
    "defuse-bitmap/arbitrary",
    "defuse-crypto/arbitrary",
    "defuse-token-id/arbitrary",
    "defuse-ton-connect/arbitrary",
]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
chrono = { workspace = true, features = ["now"] }

[dev-dependencies]
defuse-test-utils.workspace = true

arbitrary.workspace = true
hex-literal.workspace = true
itertools.workspace = true
near-sdk = { workspace = true, features = ["unit-testing"] }
rstest.workspace = true

[lints]
workspace = true
