[package]
name = "defuse-crypto"
edition.workspace = true
version.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
hex.workspace = true
near-sdk = { workspace = true, features = ["unstable"] }
strum.workspace = true
thiserror.workspace = true

ed25519-dalek = { workspace = true, optional = true }
p256 = { workspace = true, optional = true }
generic-array = { workspace = true, features = [
    "compat-0_14",
], optional = true }

arbitrary = { workspace = true, features = ["derive"], optional = true }
near-api-types = { workspace = true, optional = true }
serde_with.workspace = true

[features]
default = ["ed25519", "secp256k1", "p256"]

ed25519 = ["dep:ed25519-dalek"]
secp256k1 = []
p256 = ["dep:p256", "dep:generic-array"]

abi = []
arbitrary = ["dep:arbitrary"]
near-api-types = ["dep:near-api-types", "ed25519", "secp256k1"]


[lints]
workspace = true

[dev-dependencies]
arbitrary = { workspace = true, features = ["derive"] }
near-sdk = { workspace = true, features = ["unstable", "unit-testing"] }
rstest.workspace = true
