[package]
name = "defuse-crypto"
edition.workspace = true
version.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
ed25519-dalek.workspace = true
generic-array = { workspace = true, features = ["compat-0_14"] }
hex.workspace = true
near-sdk = { workspace = true, features = ["unstable"] }
p256.workspace = true
schnorrkel.workspace = true
strum.workspace = true
thiserror.workspace = true

arbitrary = { workspace = true, features = ["derive"], optional = true }
near-api-types = { workspace = true, optional = true }
serde_with = { workspace = true, optional = true }

[features]
abi = ["serde", "serde_with/schemars_0_8"]
arbitrary = ["dep:arbitrary"]
near-api-types = ["dep:near-api-types"]
serde = ["dep:serde_with"]

[lints]
workspace = true

[dev-dependencies]
near-sdk = { workspace = true, features = ["unstable", "unit-testing"] }
rstest.workspace = true
