[package]
name = "defuse-deadline"
edition.workspace = true
version.workspace = true
rust-version.workspace = true
repository.workspace = true

[lints]
workspace = true

[features]
abi = ["near-sdk/__abi-generate"]

[dependencies]
defuse-borsh-utils = { workspace = true, features = ["chrono"] }
defuse-near-utils = { workspace = true, features = ["time"] }
defuse-num-utils.workspace = true

near-sdk.workspace = true
chrono = { workspace = true, features = ["clock", "serde"] }
