[package]
name = "defuse-deadline"
edition.workspace = true
version.workspace = true
rust-version.workspace = true
repository.workspace = true

[lints]
workspace = true

[features]
abi = ["defuse-borsh-utils/abi", "near-sdk/abi"]

[dependencies]
defuse-borsh-utils = { workspace = true, features = ["chrono"] }
defuse-near-utils = { workspace = true, features = ["time"] }
defuse-num-utils.workspace = true

chrono = { workspace = true, features = ["serde"] }
near-sdk.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
chrono = { workspace = true, features = ["clock", "now", "serde"] }
