[package]
name = "defuse"
version = "0.4.1"
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
readme = "../README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[lints]
workspace = true

[dependencies]
defuse-admin-utils.workspace = true
defuse-auth-call.workspace = true
defuse-bitmap = { workspace = true, optional = true }
defuse-borsh-utils = { workspace = true, optional = true }
defuse-controller.workspace = true
defuse-core.workspace = true
defuse-io-utils = { workspace = true, optional = true }
defuse-near-utils.workspace = true
defuse-nep245.workspace = true
defuse-map-utils = { workspace = true, optional = true }
defuse-serde-utils.workspace = true
defuse-wnear = { workspace = true, optional = true }

bitflags = { workspace = true, optional = true }
bnum.workspace = true
impl-tools.workspace = true
itertools.workspace = true
near-contract-standards.workspace = true
near-plugins.workspace = true
near-sdk.workspace = true
serde_with.workspace = true
strum.workspace = true
thiserror.workspace = true

arbitrary = {workspace = true, optional = true}
defuse-sandbox = {workspace = true, optional = true}
defuse-test-utils = {workspace = true, optional = true}

[package.metadata.near.reproducible_build]
image = "sourcescan/cargo-near:0.18.0-rust-1.86.0"
image_digest = "sha256:2d0d458d2357277df669eac6fa23a1ac922e5ed16646e1d3315336e4dff18043"
passed_env = []
container_build_command = [
    "cargo",
    "near",
    "build",
    "non-reproducible-wasm",
    "--locked",
    "--features=abi,contract,imt",
    "--no-embed-abi",
]

[features]
abi = ["defuse-core/abi"]
arbitrary = ["defuse-core/arbitrary", "dep:arbitrary",]
contract = [
    "dep:defuse-bitmap",
    "dep:defuse-borsh-utils",
    "dep:defuse-io-utils",
    "dep:defuse-map-utils",
    "dep:defuse-wnear",
    "dep:bitflags",
]
imt = ["defuse-core/imt"]

[dev-dependencies]
defuse-core = { workspace = true, features = ["arbitrary"] }
defuse-randomness.workspace = true
defuse-tests.workspace = true

chrono.workspace = true
anyhow.workspace = true
tokio = { workspace = true, features = ["macros"] }

futures.workspace = true
arbitrary.workspace = true
itertools.workspace = true
proptest = { workspace = true }
rstest.workspace = true
near-sdk = { workspace = true, features = ["non-contract-usage"] }
