[package]
name = "defuse-erc191"
edition.workspace = true
version.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
defuse-crypto = { workspace = true, features = ["serde"] }

impl-tools.workspace = true
near-sdk.workspace = true
serde_with.workspace = true

[dev-dependencies]
hex.workspace = true
hex-literal.workspace = true
near-sdk = { workspace = true, features = ["unit-testing"] }

[features]
abi = []

[lints]
workspace = true
