[package]
name = "defuse-escrow-proxy"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[lints]
workspace = true

[dependencies]
defuse-near-utils.workspace = true
defuse-nep245.workspace = true
defuse-oneshot-condvar = { workspace = true }

defuse-auth-call = { workspace = true, optional = true }
defuse-escrow-swap = { workspace = true, optional = true }
defuse-token-id = { workspace = true, optional=true }

near-contract-standards.workspace = true
near-sdk = { workspace = true, features = ["deterministic-account-ids"] }
serde_with = { workspace = true, features = ["hex"] }
thiserror.workspace = true

[features]
default = ["nep141", "nep245", "escrow-swap", "auth-call"]

abi = ["defuse-oneshot-condvar/abi", "defuse-escrow-swap?/abi"]
auth-call = ["dep:defuse-auth-call", "defuse-oneshot-condvar/auth-call"]
contract = []
escrow-swap = ["dep:defuse-escrow-swap"]
nep141 = ["dep:defuse-token-id"]
nep245 = ["dep:defuse-token-id"]


[[example]]
name = "escrow-swap-demo"
required-features = ["test-utils"]
