[package]
name = "defuse-escrow-proxy"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[lints]
workspace = true

[package.metadata.near.reproducible_build]
image = "sourcescan/cargo-near:0.19.0-rust-1.86.0"
image_digest = "sha256:772638e343baeeea24e49062c7d424274f3441452cc06ce97fc4e5695b19fecc"
passed_env = []
container_build_command = [
    "cargo",
    "near",
    "build",
    "non-reproducible-wasm",
    "--locked",
    "--features=abi,contract",
    "--no-embed-abi",
]

[dependencies]
defuse-near-utils.workspace = true
defuse-nep245.workspace = true
defuse-oneshot-condvar = { workspace = true }

near-contract-standards.workspace = true
near-sdk = { workspace = true, features = ["deterministic-account-ids"] }
serde_with = { workspace = true, features = ["hex"] }
thiserror.workspace = true

defuse-auth-call = { workspace = true, optional = true }
defuse-escrow-swap = { workspace = true, optional = true }
defuse-token-id = { workspace = true, optional=true }

[features]
default = ["nep141", "nep245", "escrow-swap", "auth-call"]

abi = ["defuse-oneshot-condvar/abi", "defuse-escrow-swap?/abi"]
auth-call = ["dep:defuse-auth-call", "defuse-oneshot-condvar/auth-call"]
contract = []
escrow-swap = ["dep:defuse-escrow-swap"]
nep141 = ["dep:defuse-token-id"]
nep245 = ["dep:defuse-token-id"]


[[example]]
name = "escrow-swap-demo"
required-features = ["test-utils"]
